# Capoeira_jogos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_exe.sh  environment.yml  example_excel_file.xlsx  pyproject.toml  requirements.txt  setup.py  setup.sh
capoeira_jogos/: app_layout.py  app_logic.py  dash_app.py  jogos_app.py  jogos_app_old.py  jogos_manager.py  jogos_manager.spec  main.py  paths.py
examples/: example_excel_file.xlsx
src/: jogos_app.py  main.py
